--- a/bcc_recipe.yaml
+++ b/bcc_recipe.yaml
@@ -3,265 +3,261 @@ $onesync: on
 $steamRequired: true
 
 name: BCC Scripts Pack
-author: Bryce Canyon County
-description: Paquete completo de 62 recursos de Bryce Canyon County listo para instalar en txAdmin.
+author: BryceCanyonCounty
+description: Pack completo de 62 recursos de BCC listo para usar en txAdmin con VORPcore.
 
 variables:
     steam_webApiKey: "none"
     
 tasks:
-  # ------------------------
-  # Recursos principales BCC
-  # ------------------------
+  # ======================
+  # 1. Descargar Repositorios BCC
+  # ======================
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-banks
     dest: ./resources/[bcc]/bcc-banks
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-horses
-    dest: ./resources/[bcc]/bcc-horses
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-shops
-    dest: ./resources/[bcc]/bcc-shops
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-stables
-    dest: ./resources/[bcc]/bcc-stables
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-lawmen
-    dest: ./resources/[bcc]/bcc-lawmen
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-mining
-    dest: ./resources/[bcc]/bcc-mining
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-farming
-    dest: ./resources/[bcc]/bcc-farming
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-fishing
-    dest: ./resources/[bcc]/bcc-fishing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-crafting
-    dest: ./resources/[bcc]/bcc-crafting
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-doctor
-    dest: ./resources/[bcc]/bcc-doctor
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-housing
-    dest: ./resources/[bcc]/bcc-housing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-weapons
-    dest: ./resources/[bcc]/bcc-weapons
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-clothing
-    dest: ./resources/[bcc]/bcc-clothing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-trains
-    dest: ./resources/[bcc]/bcc-trains
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-stagecoach
-    dest: ./resources/[bcc]/bcc-stagecoach
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-mail
-    dest: ./resources/[bcc]/bcc-mail
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-robberies
-    dest: ./resources/[bcc]/bcc-robberies
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-saloons
-    dest: ./resources/[bcc]/bcc-saloons
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-bounty
-    dest: ./resources/[bcc]/bcc-bounty
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-goldrush
-    dest: ./resources/[bcc]/bcc-goldrush
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gunsmith
-    dest: ./resources/[bcc]/bcc-gunsmith
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-trading
-    dest: ./resources/[bcc]/bcc-trading
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cattle
-    dest: ./resources/[bcc]/bcc-cattle
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-tanner
-    dest: ./resources/[bcc]/bcc-tanner
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-brewing
-    dest: ./resources/[bcc]/bcc-brewing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-butcher
-    dest: ./resources/[bcc]/bcc-butcher
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-hunting
-    dest: ./resources/[bcc]/bcc-hunting
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-blacksmith
-    dest: ./resources/[bcc]/bcc-blacksmith
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-tailor
-    dest: ./resources/[bcc]/bcc-tailor
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gardening
-    dest: ./resources/[bcc]/bcc-gardening
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-treasures
-    dest: ./resources/[bcc]/bcc-treasures
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-ranch
-    dest: ./resources/[bcc]/bcc-ranch
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-bandits
-    dest: ./resources/[bcc]/bcc-bandits
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cooking
-    dest: ./resources/[bcc]/bcc-cooking
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-hotel
-    dest: ./resources/[bcc]/bcc-hotel
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-barber
     dest: ./resources/[bcc]/bcc-barber
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-bankrobbery
-    dest: ./resources/[bcc]/bcc-bankrobbery
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-trapper
-    dest: ./resources/[bcc]/bcc-trapper
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-prison
-    dest: ./resources/[bcc]/bcc-prison
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-missions
-    dest: ./resources/[bcc]/bcc-missions
+    src: https://github.com/BryceCanyonCounty/bcc-blacksmith
+    dest: ./resources/[bcc]/bcc-blacksmith
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-campfires
     dest: ./resources/[bcc]/bcc-campfires
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-railroad
-    dest: ./resources/[bcc]/bcc-railroad
+    src: https://github.com/BryceCanyonCounty/bcc-clothing
+    dest: ./resources/[bcc]/bcc-clothing
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-sheriff
-    dest: ./resources/[bcc]/bcc-sheriff
+    src: https://github.com/BryceCanyonCounty/bcc-core
+    dest: ./resources/[bcc]/bcc-core
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-store
-    dest: ./resources/[bcc]/bcc-store
+    src: https://github.com/BryceCanyonCounty/bcc-doctor
+    dest: ./resources/[bcc]/bcc-doctor
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-banknotes
-    dest: ./resources/[bcc]/bcc-banknotes
+    src: https://github.com/BryceCanyonCounty/bcc-fishing
+    dest: ./resources/[bcc]/bcc-fishing
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-outlaws
-    dest: ./resources/[bcc]/bcc-outlaws
+    src: https://github.com/BryceCanyonCounty/bcc-gunshop
+    dest: ./resources/[bcc]/bcc-gunshop
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-exchange
-    dest: ./resources/[bcc]/bcc-exchange
+    src: https://github.com/BryceCanyonCounty/bcc-horses
+    dest: ./resources/[bcc]/bcc-horses
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gambling
-    dest: ./resources/[bcc]/bcc-gambling
+    src: https://github.com/BryceCanyonCounty/bcc-inventory
+    dest: ./resources/[bcc]/bcc-inventory
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-law
+    dest: ./resources/[bcc]/bcc-law
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-mail
+    dest: ./resources/[bcc]/bcc-mail
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-mining
+    dest: ./resources/[bcc]/bcc-mining
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-pawnshop
+    dest: ./resources/[bcc]/bcc-pawnshop
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-prison
+    dest: ./resources/[bcc]/bcc-prison
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-stables
+    dest: ./resources/[bcc]/bcc-stables
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-stores
+    dest: ./resources/[bcc]/bcc-stores
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-trading
+    dest: ./resources/[bcc]/bcc-trading
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-wagons
+    dest: ./resources/[bcc]/bcc-wagons
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-weapons
+    dest: ./resources/[bcc]/bcc-weapons
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-farming
+    dest: ./resources/[bcc]/bcc-farming
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-housing
+    dest: ./resources/[bcc]/bcc-housing
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-tasks
+    dest: ./resources/[bcc]/bcc-tasks
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-gold
+    dest: ./resources/[bcc]/bcc-gold
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-robbery
+    dest: ./resources/[bcc]/bcc-robbery
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-crafting
+    dest: ./resources/[bcc]/bcc-crafting
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-treasure
+    dest: ./resources/[bcc]/bcc-treasure
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-medicine
     dest: ./resources/[bcc]/bcc-medicine
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cards
-    dest: ./resources/[bcc]/bcc-cards
+    src: https://github.com/BryceCanyonCounty/bcc-woodcutting
+    dest: ./resources/[bcc]/bcc-woodcutting
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-auction
-    dest: ./resources/[bcc]/bcc-auction
+    src: https://github.com/BryceCanyonCounty/bcc-hunting
+    dest: ./resources/[bcc]/bcc-hunting
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-horsetrader
-    dest: ./resources/[bcc]/bcc-horsetrader
+    src: https://github.com/BryceCanyonCounty/bcc-delivery
+    dest: ./resources/[bcc]/bcc-delivery
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-lumber
-    dest: ./resources/[bcc]/bcc-lumber
+    src: https://github.com/BryceCanyonCounty/bcc-hotel
+    dest: ./resources/[bcc]/bcc-hotel
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-cooking
+    dest: ./resources/[bcc]/bcc-cooking
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-butchering
+    dest: ./resources/[bcc]/bcc-butchering
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-smuggling
     dest: ./resources/[bcc]/bcc-smuggling
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-wildwest
-    dest: ./resources/[bcc]/bcc-wildwest
+    src: https://github.com/BryceCanyonCounty/bcc-cleaning
+    dest: ./resources/[bcc]/bcc-cleaning
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-townhall
-    dest: ./resources/[bcc]/bcc-townhall
+    src: https://github.com/BryceCanyonCounty/bcc-mechanics
+    dest: ./resources/[bcc]/bcc-mechanics
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-cards
+    dest: ./resources/[bcc]/bcc-cards
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-roulette
+    dest: ./resources/[bcc]/bcc-roulette
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-poker
+    dest: ./resources/[bcc]/bcc-poker
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-drugs
+    dest: ./resources/[bcc]/bcc-drugs
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-events
+    dest: ./resources/[bcc]/bcc-events
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-missions
+    dest: ./resources/[bcc]/bcc-missions
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-gangs
+    dest: ./resources/[bcc]/bcc-gangs
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-police
+    dest: ./resources/[bcc]/bcc-police
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-radio
+    dest: ./resources/[bcc]/bcc-radio
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-trains
+    dest: ./resources/[bcc]/bcc-trains
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-shops
+    dest: ./resources/[bcc]/bcc-shops
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-emotes
+    dest: ./resources/[bcc]/bcc-emotes
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-saloons
+    dest: ./resources/[bcc]/bcc-saloons
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-market
     dest: ./resources/[bcc]/bcc-market
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-auctionhouse
-    dest: ./resources/[bcc]/bcc-auctionhouse
+    src: https://github.com/BryceCanyonCounty/bcc-loot
+    dest: ./resources/[bcc]/bcc-loot
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-treasury
-    dest: ./resources/[bcc]/bcc-treasury
+    src: https://github.com/BryceCanyonCounty/bcc-skinning
+    dest: ./resources/[bcc]/bcc-skinning
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-banking
-    dest: ./resources/[bcc]/bcc-banking
+    src: https://github.com/BryceCanyonCounty/bcc-currency
+    dest: ./resources/[bcc]/bcc-currency
 
-  # ------------------------
-  # Configuración del server
-  # ------------------------
-    - action: create_file
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-ui
+    dest: ./resources/[bcc]/bcc-ui
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-utilities
+    dest: ./resources/[bcc]/bcc-utilities
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-taxes
+    dest: ./resources/[bcc]/bcc-taxes
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-notes
+    dest: ./resources/[bcc]/bcc-notes
+
+  # ======================
+  # 2. Crear server.cfg
+  # ======================
+  - action: create_file
     path: ./server.cfg
     data: |
-      # --------------------------
-      #  Servidor BCC Scripts Pack
-      # --------------------------
+      # ======================
+      #  BCC RedM Server.cfg
+      # ======================
 
       endpoint_add_tcp "0.0.0.0:30120"
       endpoint_add_udp "0.0.0.0:30120"
@@ -270,78 +266,76 @@ tasks:
       set gamename rdr3
       set sv_enforceGameBuild 1491
 
-      sv_licenseKey "REEMPLAZA_CON_TU_KEY"
-      sets tags "roleplay, redm, bcc, western"
+      # Nombre del servidor
+      sv_hostname "La Pradera RP | Servidor BCC Completo"
 
+      # Base de datos
+      set mysql_connection_string "mysql://root@localhost/bccredm?charset=utf8mb4"
+
+      # Recursos base
       ensure mapmanager
       ensure spawnmanager
       ensure sessionmanager
-      ensure fivem
-      ensure hardcap
-      ensure rconlog
+      ensure chat
+      ensure vorp_core
 
-      # ---------------------
-      # Recursos BCC (62 total)
-      # ---------------------
+      # Recursos BCC
+      ensure bcc-core
       ensure bcc-banks
-      ensure bcc-horses
-      ensure bcc-shops
-      ensure bcc-stables
-      ensure bcc-lawmen
-      ensure bcc-mining
-      ensure bcc-farming
-      ensure bcc-fishing
-      ensure bcc-crafting
-      ensure bcc-doctor
-      ensure bcc-housing
-      ensure bcc-weapons
-      ensure bcc-clothing
-      ensure bcc-trains
-      ensure bcc-stagecoach
-      ensure bcc-mail
-      ensure bcc-robberies
-      ensure bcc-saloons
-      ensure bcc-bounty
-      ensure bcc-goldrush
-      ensure bcc-gunsmith
-      ensure bcc-trading
-      ensure bcc-cattle
-      ensure bcc-tanner
-      ensure bcc-brewing
-      ensure bcc-butcher
-      ensure bcc-hunting
-      ensure bcc-blacksmith
-      ensure bcc-tailor
-      ensure bcc-gardening
-      ensure bcc-treasures
-      ensure bcc-ranch
-      ensure bcc-bandits
-      ensure bcc-cooking
-      ensure bcc-hotel
       ensure bcc-barber
-      ensure bcc-bankrobbery
-      ensure bcc-trapper
-      ensure bcc-prison
-      ensure bcc-missions
+      ensure bcc-blacksmith
       ensure bcc-campfires
-      ensure bcc-railroad
-      ensure bcc-sheriff
-      ensure bcc-store
-      ensure bcc-banknotes
-      ensure bcc-outlaws
-      ensure bcc-exchange
-      ensure bcc-gambling
+      ensure bcc-clothing
+      ensure bcc-doctor
+      ensure bcc-fishing
+      ensure bcc-gunshop
+      ensure bcc-horses
+      ensure bcc-inventory
+      ensure bcc-law
+      ensure bcc-mail
+      ensure bcc-mining
+      ensure bcc-pawnshop
+      ensure bcc-prison
+      ensure bcc-stables
+      ensure bcc-stores
+      ensure bcc-trading
+      ensure bcc-wagons
+      ensure bcc-weapons
+      ensure bcc-farming
+      ensure bcc-housing
+      ensure bcc-tasks
+      ensure bcc-gold
+      ensure bcc-robbery
+      ensure bcc-crafting
+      ensure bcc-treasure
       ensure bcc-medicine
-      ensure bcc-cards
-      ensure bcc-auction
-      ensure bcc-horsetrader
-      ensure bcc-lumber
+      ensure bcc-woodcutting
+      ensure bcc-hunting
+      ensure bcc-delivery
+      ensure bcc-hotel
+      ensure bcc-cooking
+      ensure bcc-butchering
       ensure bcc-smuggling
-      ensure bcc-wildwest
-      ensure bcc-townhall
+      ensure bcc-cleaning
+      ensure bcc-mechanics
+      ensure bcc-cards
+      ensure bcc-roulette
+      ensure bcc-poker
+      ensure bcc-drugs
+      ensure bcc-events
+      ensure bcc-missions
+      ensure bcc-gangs
+      ensure bcc-police
+      ensure bcc-radio
+      ensure bcc-trains
+      ensure bcc-shops
+      ensure bcc-emotes
+      ensure bcc-saloons
       ensure bcc-market
-      ensure bcc-auctionhouse
-      ensure bcc-treasury
-      ensure bcc-banking
-
-      
+      ensure bcc-loot
+      ensure bcc-skinning
+      ensure bcc-currency
+      ensure bcc-ui
+      ensure bcc-utilities
+      ensure bcc-taxes
+      ensure bcc-notes
