--- a/bcc_recipe.yaml
+++ b/bcc_recipe.yaml
@@ -1,341 +1,196 @@
 $engine: 3
 $onesync: on
 $steamRequired: true
-
 name: BCC Scripts Pack
 author: BryceCanyonCounty
-description: Pack completo de 62 recursos de BCC listo para usar en txAdmin con VORPcore.
+description: Recipe oficial para instalar todos los scripts de Bryce Canyon County en tu servidor RedM.
 
 variables:
     steam_webApiKey: "none"
-    
+
 tasks:
-  # ======================
-  # 1. Descargar Repositorios BCC
-  # ======================
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-banks
-    dest: ./resources/[bcc]/bcc-banks
+
+#======================================================
+# CONFIGURACIÓN INICIAL
+#======================================================
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-barber
-    dest: ./resources/[bcc]/bcc-barber
+    src: https://github.com/BryceCanyonCounty/bcc-txadmin-recipe
+    ref: main
+    dest: ./temp/bcc_txAdminRecipe
+  
+  - action: move_path
+    src: ./temp/bcc_txAdminRecipe/server.cfg
+    dest: ./server.cfg
+
+  - action: move_path
+    src: ./temp/bcc_txAdminRecipe/icon.png
+    dest: ./icon.png
+
+#======================================================
+# DESCARGA DE SCRIPTS PRINCIPALES BCC
+#======================================================
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-blacksmith
-    dest: ./resources/[bcc]/bcc-blacksmith
+    src: https://github.com/BryceCanyonCounty/bcc-anticheat
+    ref: main
+    dest: ./resources/[bcc]/bcc-anticheat
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-campfires
-    dest: ./resources/[bcc]/bcc-campfires
+    src: https://github.com/BryceCanyonCounty/bcc-loadscreen
+    ref: main
+    dest: ./resources/[bcc]/bcc-loadscreen
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-clothing
-    dest: ./resources/[bcc]/bcc-clothing
+    src: https://github.com/BryceCanyonCounty/bcc-pets
+    ref: main
+    dest: ./resources/[bcc]/bcc-pets
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-core
-    dest: ./resources/[bcc]/bcc-core
+    src: https://github.com/BryceCanyonCounty/bcc-train
+    ref: main
+    dest: ./resources/[bcc]/bcc-train
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-doctor
-    dest: ./resources/[bcc]/bcc-doctor
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-fishing
-    dest: ./resources/[bcc]/bcc-fishing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gunshop
-    dest: ./resources/[bcc]/bcc-gunshop
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-horses
-    dest: ./resources/[bcc]/bcc-horses
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-inventory
-    dest: ./resources/[bcc]/bcc-inventory
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-law
-    dest: ./resources/[bcc]/bcc-law
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-mail
-    dest: ./resources/[bcc]/bcc-mail
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-mining
-    dest: ./resources/[bcc]/bcc-mining
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-pawnshop
-    dest: ./resources/[bcc]/bcc-pawnshop
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-prison
-    dest: ./resources/[bcc]/bcc-prison
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-stables
-    dest: ./resources/[bcc]/bcc-stables
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-stores
-    dest: ./resources/[bcc]/bcc-stores
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-trading
-    dest: ./resources/[bcc]/bcc-trading
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-wagons
-    dest: ./resources/[bcc]/bcc-wagons
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-weapons
-    dest: ./resources/[bcc]/bcc-weapons
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-farming
-    dest: ./resources/[bcc]/bcc-farming
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-housing
-    dest: ./resources/[bcc]/bcc-housing
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-tasks
-    dest: ./resources/[bcc]/bcc-tasks
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gold
-    dest: ./resources/[bcc]/bcc-gold
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-robbery
-    dest: ./resources/[bcc]/bcc-robbery
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-crafting
-    dest: ./resources/[bcc]/bcc-crafting
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-treasure
-    dest: ./resources/[bcc]/bcc-treasure
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-medicine
-    dest: ./resources/[bcc]/bcc-medicine
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-woodcutting
-    dest: ./resources/[bcc]/bcc-woodcutting
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-hunting
-    dest: ./resources/[bcc]/bcc-hunting
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-delivery
-    dest: ./resources/[bcc]/bcc-delivery
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-hotel
-    dest: ./resources/[bcc]/bcc-hotel
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cooking
-    dest: ./resources/[bcc]/bcc-cooking
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-butchering
-    dest: ./resources/[bcc]/bcc-butchering
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-smuggling
-    dest: ./resources/[bcc]/bcc-smuggling
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cleaning
-    dest: ./resources/[bcc]/bcc-cleaning
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-mechanics
-    dest: ./resources/[bcc]/bcc-mechanics
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-cards
-    dest: ./resources/[bcc]/bcc-cards
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-roulette
-    dest: ./resources/[bcc]/bcc-roulette
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-poker
-    dest: ./resources/[bcc]/bcc-poker
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-drugs
-    dest: ./resources/[bcc]/bcc-drugs
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-events
-    dest: ./resources/[bcc]/bcc-events
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-missions
-    dest: ./resources/[bcc]/bcc-missions
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-gangs
-    dest: ./resources/[bcc]/bcc-gangs
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-police
-    dest: ./resources/[bcc]/bcc-police
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-radio
-    dest: ./resources/[bcc]/bcc-radio
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-trains
-    dest: ./resources/[bcc]/bcc-trains
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-shops
-    dest: ./resources/[bcc]/bcc-shops
-
-  - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-emotes
-    dest: ./resources/[bcc]/bcc-emotes
+    src: https://github.com/BryceCanyonCounty/bcc-scene
+    ref: main
+    dest: ./resources/[bcc]/bcc-scene
 
   - action: download_github
     src: https://github.com/BryceCanyonCounty/bcc-saloons
+    ref: main
     dest: ./resources/[bcc]/bcc-saloons
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-market
-    dest: ./resources/[bcc]/bcc-market
+    src: https://github.com/BryceCanyonCounty/bcc-cli
+    ref: main
+    dest: ./resources/[bcc]/bcc-cli
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-loot
-    dest: ./resources/[bcc]/bcc-loot
+    src: https://github.com/BryceCanyonCounty/bcc-mailbox
+    ref: main
+    dest: ./resources/[bcc]/bcc-mailbox
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-skinning
-    dest: ./resources/[bcc]/bcc-skinning
+    src: https://github.com/BryceCanyonCounty/bcc-portals
+    ref: main
+    dest: ./resources/[bcc]/bcc-portals
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-currency
-    dest: ./resources/[bcc]/bcc-currency
+    src: https://github.com/BryceCanyonCounty/bcc-documents
+    ref: main
+    dest: ./resources/[bcc]/bcc-documents
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-ui
-    dest: ./resources/[bcc]/bcc-ui
+    src: https://github.com/BryceCanyonCounty/bcc-job-alerts
+    ref: main
+    dest: ./resources/[bcc]/bcc-job-alerts
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-utilities
-    dest: ./resources/[bcc]/bcc-utilities
+    src: https://github.com/BryceCanyonCounty/bcc-minigames
+    ref: main
+    dest: ./resources/[bcc]/bcc-minigames
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-taxes
-    dest: ./resources/[bcc]/bcc-taxes
+    src: https://github.com/BryceCanyonCounty/bcc-reports
+    ref: main
+    dest: ./resources/[bcc]/bcc-reports
 
   - action: download_github
-    src: https://github.com/BryceCanyonCounty/bcc-notes
-    dest: ./resources/[bcc]/bcc-notes
+    src: https://github.com/BryceCanyonCounty/bcc-ai
+    ref: main
+    dest: ./resources/[bcc]/bcc-ai
 
-  # ======================
-  # 2. Crear server.cfg
-  # ======================
-  - action: create_file
-    path: ./server.cfg
-    data: |
-      # ======================
-      #  BCC RedM Server.cfg
-      # ======================
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-zonenotify
+    ref: main
+    dest: ./resources/[bcc]/bcc-zonenotify
 
-      endpoint_add_tcp "0.0.0.0:30120"
-      endpoint_add_udp "0.0.0.0:30120"
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-sellNPC
+    ref: main
+    dest: ./resources/[bcc]/bcc-sellNPC
 
-      sv_maxclients 48
-      set gamename rdr3
-      set sv_enforceGameBuild 1491
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-holidays
+    ref: main
+    dest: ./resources/[bcc]/bcc-holidays
 
-      # Nombre del servidor
-      sv_hostname "La Pradera RP | Servidor BCC Completo"
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-oil
+    ref: main
+    dest: ./resources/[bcc]/bcc-oil
 
-      # Base de datos
-      set mysql_connection_string "mysql://root@localhost/bccredm?charset=utf8mb4"
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-goldpanning
+    ref: main
+    dest: ./resources/[bcc]/bcc-goldpanning
 
-      # Recursos base
-      ensure mapmanager
-      ensure spawnmanager
-      ensure sessionmanager
-      ensure chat
-      ensure vorp_core
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-legendaries
+    ref: main
+    dest: ./resources/[bcc]/bcc-legendaries
 
-      # Recursos BCC
-      ensure bcc-core
-      ensure bcc-banks
-      ensure bcc-barber
-      ensure bcc-blacksmith
-      ensure bcc-campfires
-      ensure bcc-clothing
-      ensure bcc-doctor
-      ensure bcc-fishing
-      ensure bcc-gunshop
-      ensure bcc-horses
-      ensure bcc-inventory
-      ensure bcc-law
-      ensure bcc-mail
-      ensure bcc-mining
-      ensure bcc-pawnshop
-      ensure bcc-prison
-      ensure bcc-stables
-      ensure bcc-stores
-      ensure bcc-trading
-      ensure bcc-wagons
-      ensure bcc-weapons
-      ensure bcc-farming
-      ensure bcc-housing
-      ensure bcc-tasks
-      ensure bcc-gold
-      ensure bcc-robbery
-      ensure bcc-crafting
-      ensure bcc-treasure
-      ensure bcc-medicine
-      ensure bcc-woodcutting
-      ensure bcc-hunting
-      ensure bcc-delivery
-      ensure bcc-hotel
-      ensure bcc-cooking
-      ensure bcc-butchering
-      ensure bcc-smuggling
-      ensure bcc-cleaning
-      ensure bcc-mechanics
-      ensure bcc-cards
-      ensure bcc-roulette
-      ensure bcc-poker
-      ensure bcc-drugs
-      ensure bcc-events
-      ensure bcc-missions
-      ensure bcc-gangs
-      ensure bcc-police
-      ensure bcc-radio
-      ensure bcc-trains
-      ensure bcc-shops
-      ensure bcc-emotes
-      ensure bcc-saloons
-      ensure bcc-market
-      ensure bcc-loot
-      ensure bcc-skinning
-      ensure bcc-currency
-      ensure bcc-ui
-      ensure bcc-utilities
-      ensure bcc-taxes
-      ensure bcc-notes
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-vue-boilerplate
+    ref: main
+    dest: ./resources/[bcc]/bcc-vue-boilerplate
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/rdr3-nativedb-data
+    ref: main
+    dest: ./resources/[bcc]/rdr3-nativedb-data
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-jobmenu
+    ref: main
+    dest: ./resources/[bcc]/bcc-jobmenu
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-versioner
+    ref: main
+    dest: ./resources/[bcc]/bcc-versioner
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-loadscreen-helper
+    ref: main
+    dest: ./resources/[bcc]/bcc-loadscreen-helper
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-discord
+    ref: main
+    dest: ./resources/[bcc]/bcc-discord
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-deferralcards
+    ref: main
+    dest: ./resources/[bcc]/bcc-deferralcards
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-cfx-parser
+    ref: main
+    dest: ./resources/[bcc]/bcc-cfx-parser
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/bcc-playerblips
+    ref: main
+    dest: ./resources/[bcc]/bcc-playerblips
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/redbackup
+    ref: main
+    dest: ./resources/[bcc]/redbackup
+
+  - action: download_github
+    src: https://github.com/BryceCanyonCounty/vorp_txadmin_recipe
+    ref: main
+    dest: ./resources/[bcc]/vorp_txadmin_recipe
+
+#======================================================
+# LIMPIEZA FINAL
+#======================================================
+
+  - action: remove_path
+    path: ./temp
+  - action: remove_path
+    path: ./tmp
